Fixed overflow x

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ html {
   font-size: 10px;
   position: relative;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
     margin-bottom: 9rem;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
